--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2>Contact</h2>
             <p>If you're looking for someone to extract and structure data for your business, let's work together!</p>
             <ul>
-                <li>Email: <a href="mailto:martin@example.com">martin@example.com</a></li>
+                <li>Email: <a href="mailto:martin@example.com">martin@votapek.cz</a></li>
                 <li>GitHub: <a href="https://github.com/martin-vot" target="_blank">martin-vot</a></li>
             </ul>
         </section>
